--- a/package.json
+++ b/package.json
@@ -1,28 +1,49 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "dog-image-finder",
+  "authors": [
+    {
+      "name": "Peter Popovics",
+      "email": "popperur@gmail.com"
+    }
+  ],
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "Dog Image Finder",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
+    "start": "vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "prettier": "npx prettier --list-different --write --no-error-on-unmatched-pattern 'src/**/*.{js,jsx,ts,tsx,css}' '__tests__/**/*.{js,jsx,ts,tsx,css}'",
+    "preview": "vite preview",
+    "test": "vitest"
   },
+  "repository": "https://github.com/popperur/dog-image-finder",
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "antd": "^5.17.2",
+    "axios": "^1.7.1",
+    "eslint": "^8.57.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
+    "@types/node": "^20.14.2",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jest-styled-components": "^7.2.0",
+    "jsdom": "^24.1.0",
+    "prettier": "^3.2.5",
     "typescript": "^5.2.2",
-    "vite": "^5.2.11"
+    "vite": "^5.2.11",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
   }
 }
