--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,14 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "components/*": ["./src/components/*"],
+      "hooks/*": ["./src/hooks/*"]
+    },
+    "types": ["vitest/globals", "node"]
   },
-  "include": ["src"],
+//  "include": ["src"],
+  "include": ["src/**/*", "__tests__/**/*", "vitest.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
