--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.57.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
